--- a/src/style/headernavbar.scss
+++ b/src/style/headernavbar.scss
@@ -1,9 +1,14 @@
 .header {
+  grid-row: header-s/header-e;
+  // this will let it spread all the way
+  grid-column: 1/-1;
   display: grid;
   justify-content: center;
 }
 
-.nav {
+.navbar {
+  grid-row: navbar-s/navbar-e;
+  grid-column: 1/-1;
   background-color: #333;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
 }
