--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -9,9 +9,15 @@ html {
   padding: 0;
   box-sizing: inherit;
 }
+
+body {
+  font-family: "Open Sans";
+  color: #808080;
+}
 @import "./layout.scss";
 @import "./headernavbar.scss";
 @import "./auth/signin.scss";
 @import "./auth/signup.scss";
 
-@import "page-title";
+@import "./page-title";
+@import "./form-fields";
