--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -19,5 +19,6 @@ body {
 @import "./auth/signin.scss";
 @import "./auth/signup.scss";
 
-@import "./page-title";
-@import "./form-fields";
+@import "./page-title.scss";
+@import "./form-fields.scss";
+@import "./details.scss";
