--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -22,3 +22,6 @@ body {
 @import "./page-title.scss";
 @import "./form-fields.scss";
 @import "./details.scss";
+@import "./account/account";
+@import "./account/purchase-history";
+@import "./account/account-information";
