--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -25,3 +25,5 @@ body {
 @import "./account/account";
 @import "./account/purchase-history";
 @import "./account/account-information";
+// SHOP
+@import "./shop/shop";
