--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -27,3 +27,8 @@ body {
 @import "./account/account-information";
 // SHOP
 @import "./shop/shop";
+@import "./shop/shop-search-bar";
+
+//QUANITITY
+@import "./green-price-tag.scss";
+@import "./quantity";
