Making the shopping cart

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -28,6 +28,8 @@ body {
 // SHOP
 @import "./shop/shop";
 @import "./shop/shop-search-bar";
+//cart
+@import "./shop/shop-cart.scss";
 
 //QUANITITY
 @import "./green-price-tag.scss";
