Implementing Cart Grid

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -30,6 +30,7 @@ body {
 @import "./shop/shop-search-bar";
 //cart
 @import "./shop/shop-cart.scss";
+@import "./shop/cart-product";
 
 //QUANITITY
 @import "./green-price-tag.scss";
