Making the order review

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -36,3 +36,7 @@ body {
 @import "./green-price-tag.scss";
 @import "./quantity";
 @import "./shop/shop-product";
+
+// review
+
+@import "./order/review.scss";
