--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -47,3 +47,5 @@ body {
 @import "./order/review.scss";
 @import "./order/reviewForm.scss";
 @import "./order/reviewProduct.scss";
+@import "./information/payment.scss";
+@import "./information/shipping.scss";
